added possibility to hide or show elements in menu detail

--- a/client/stylesheets/12_index.css
+++ b/client/stylesheets/12_index.css
@@ -16,7 +16,8 @@
 .panel-body > img,
 .note-editable > div > img,
 .note-editable > img,
-.content > p > div > img {
+.content > p > div > img,
+.autosave-text-editor-container > div > div > img {
     max-width: 30%;
     height: auto;
 }
