--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -7,13 +7,13 @@
       <div class="col-lg-12">
         <div class="row">
           <div class="col-lg-8 col-md-8 col-xs-12 col-sm-12">
-            {{> menuItemInstructions collapsed=uiStates.instructions}}
-            {{> menuItemImage}}
-            {{> menuItemSettings}}
-            {{> menuItemsListByType type='prep' jobItems=jobItems}}
-            {{> menuItemsListByType type='ings' ingredients=ingredients}}
-            {{> menuDetailPerformance}}
-            {{> taskWidget type='menus' itemId=_id}}
+            {{> menuItemInstructions item=this uiStates=uiStatesManager}}
+            {{> menuItemImage item=this uiStates=uiStatesManager}}
+            {{> menuItemSettings item=this uiStates=uiStatesManager}}
+            {{> menuItemsListByType type='prep' jobItems=jobItems uiStates=uiStatesManager}}
+            {{> menuItemsListByType type='ings' ingredients=ingredients uiStates=uiStatesManager}}
+            {{> menuDetailPerformance item=this uiStates=uiStatesManager}}
+            {{> taskWidget type='menus' itemId=_id uiStates=uiStatesManager}}
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 no-padding">
             {{> commentsPanel id=_id type='menu'}}
