--- a/client/views/app/menu-items/details/menu-items-list-by-type/menu-items-list-by-type.html
+++ b/client/views/app/menu-items/details/menu-items-list-by-type/menu-items-list-by-type.html
@@ -6,12 +6,14 @@
         {{#if canEditMenu}}
           <button id="showIngsOrPrepList" class="btn btn-xs btn-primary" type="button">Add {{itemsName}}</button>
         {{/if}}
-        <a data-toggle="collapse" data-target="#{{type}}" aria-expanded="false" aria-controls="{{type}}">
-          <i class="fa fa-chevron-up"></i>
+        <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#{{type}}"
+           aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="{{type}}">
+          <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i>
         </a>
       </div>
     </div>
-    <div class="ibox-content no-padding white-bg" id="{{type}}" aria-expanded="false">
+    <div class="ibox-content no-padding white-bg collapse {{#if collapsed}}in{{/if}}" id="{{type}}"
+         aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
       <table class="table table-striped">
         <thead>
         <tr>
