--- a/client/views/app/tasks/task-widget/task-widget.html
+++ b/client/views/app/tasks/task-widget/task-widget.html
@@ -14,13 +14,14 @@
         <h5>Tasks &nbsp;</h5>
         <div class="ibox-tools">
           <button class="btn btn-primary btn-xs pull-left create-task">Add Task</button>
-          <a data-toggle="collapse" data-target="#Tasks" aria-expanded="false" aria-controls="Tasks">
-            <i class="fa fa-chevron-up"></i>
-          </a>
+          <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#Tasks"
+             aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="Tasks">
+            <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i></a>
         </div>
 
       </div>
-      <div id="Tasks" class="ibox-content no-padding" aria-expanded="false">
+      <div id="Tasks" class="ibox-content no-padding collapse {{#if collapsed}}in{{/if}}"
+           aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
         {{#if tasks.count}}
           <div class="table-responsive">
             <table class="table table-hover table-mail task-list-container">
