Added some changes

--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
@@ -1,7 +1,7 @@
 <template name="managerNoteWidget">
   <div class="note-list-widget">
     {{#if isNoteEditing}}
-      {{> managerNoteEditor}}
+      {{> managerNoteEditor onCloseEditor=onCloseEditor date=date}}
     {{/if}}
     <div class="col-md-12 hidden-print task-list-content">
       <div class="ibox">
