--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-notes.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-notes.html
@@ -6,7 +6,7 @@
 
   <div class="flyout-content">
     {{# if canEditRoster}}
-      {{> managerNoteWidget}}
+      {{> managerNoteWidget date=date}}
     {{/if}}
   </div>
 </template>
