--- a/client/views/app/menu-items/details/image/image.html
+++ b/client/views/app/menu-items/details/image/image.html
@@ -1,20 +1,6 @@
 <template name="menuItemImage">
   <div class="ibox panel panel-default">
-    <div class="ibox-title">
-      <h5>Image</h5>
-      <div class="ibox-tools">
-        {{#if canEditMenu}}
-          <a href="#" class="upload-image-button">
-            <i class="fa fa-cloud-upload"></i>
-          </a>
-        {{/if}}
-        <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#Image"
-           aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="Image">
-          <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i></a>
-      </div>
-    </div>
-    <div class="ibox-content panel-body collapse {{#if collapsed}}in{{/if}} editorPanel" id="Image"
-         aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
+    {{#ItemsToCollapse options=imageOptions uiStates=uiStates}}
       <div class="col-sm-9">
         <div class="menuImageDiv">
           <div class="uploadedImageDiv">
@@ -30,6 +16,6 @@
           </div>
         </div>
       </div>
-    </div>
+    {{/ItemsToCollapse}}
   </div>
 </template>
