--- a/client/views/app/menu-items/details/widgets/widgets.html
+++ b/client/views/app/menu-items/details/widgets/widgets.html
@@ -1,19 +1,6 @@
 <template name="menuDetailPerformance">
   <div class="ibox panel panel-default">
-    <div class="ibox-title">
-      <h5>Performance Snapshot</h5>
-      <div class="ibox-tools">
-        <a class="btn btn-xs btn-link"
-           href="{{pathFor route='menuItemsRankReport' category='all' rangeType='yesterday' startDate=startDate}}">
-          View Menu Rank Report
-        </a>
-        <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#MenuItemPerformance"
-           aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="MenuItemPerformance">
-          <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i></a>
-      </div>
-    </div>
-    <div class="ibox-content no-padding collapse {{#if collapsed}}in{{/if}}" id="MenuItemPerformance"
-         aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
+    {{#ItemsToCollapse options=performanceOptions uiStates=uiStates}}
       <ul class="list-group">
         <li class="list-group-item">
           <div class="row">
@@ -21,26 +8,38 @@
               <h4>Costing</h4>
             </div>
             <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6">
-              <h4>{{salesPrice}} <small>Sale Price</small></h4>
+              <h4>{{salesPrice}}
+                <small>Sale Price</small>
+              </h4>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 col-xs-offset-6 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-              <h4>{{menuItemStats.ingCost}} <small>Ing</small></h4>
+              <h4>{{menuItemStats.ingCost}}
+                <small>Ing</small>
+              </h4>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 col-xs-offset-6 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-              <h4>{{menuItemStats.prepCost}} <small>Prep</small></h4>
+              <h4>{{menuItemStats.prepCost}}
+                <small>Prep</small>
+              </h4>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 col-xs-offset-6 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-              <h4>{{menuItemStats.tax}} <small>Tax</small></h4>
+              <h4>{{menuItemStats.tax}}
+                <small>Tax</small>
+              </h4>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 col-xs-offset-6 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-              <h4>{{menuItemStats.contribution}} <small>Contribution</small></h4>
+              <h4>{{menuItemStats.contribution}}
+                <small>Contribution</small>
+              </h4>
             </div>
           </div>
         </li>
         <li class="list-group-item">
           <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-              <h4>Menu Rank <small>(last 7 days)</small></h4>
+              <h4>Menu Rank
+                <small>(last 7 days)</small>
+              </h4>
             </div>
             {{#if item.weeklyRanks}}
               <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
@@ -62,7 +61,9 @@
         <li class="list-group-item">
           <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-              <h4>Contribution <small>(last 7 days)</small></h4>
+              <h4>Contribution
+                <small>(last 7 days)</small>
+              </h4>
             </div>
             <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
               <h4 class="pull-right">123</h4>
@@ -75,6 +76,6 @@
           </div>
         </li>
       </ul>
-    </div>
+    {{/ItemsToCollapse}}
   </div>
 </template>
