--- a/client/views/app/menu-items/details/instructions/instructions.html
+++ b/client/views/app/menu-items/details/instructions/instructions.html
@@ -1,16 +1,7 @@
 <template name="menuItemInstructions">
   <div class="ibox panel panel-default">
-    <div class="ibox-title">
-      <h5>Instructions</h5>
-      <div class="ibox-tools">
-        <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#Instructions"
-           aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="Instructions">
-          <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i></a>
-      </div>
-    </div>
-    <div class="ibox-content panel-body collapse {{#if collapsed}}in{{/if}} editorPanel" id="Instructions"
-         aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
+    {{#ItemsToCollapse options=instructionsOptions uiStates=uiStates}}
       {{> autosaveTextEditor text=instructionsStr saveChanges=saveChanges}}
-    </div>
+    {{/ItemsToCollapse}}
   </div>
 </template>
