--- a/client/views/app/menu-items/details/settings/settings.html
+++ b/client/views/app/menu-items/details/settings/settings.html
@@ -1,49 +1,41 @@
 <template name="menuItemSettings">
-    <div class="ibox panel panel-default">
-      <div class="ibox-title">
-        <h5>Settings</h5>
-        <div class="ibox-tools">
-          <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#Settings"
-             aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="Settings">
-            <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i></a>
-        </div>
-      </div>
-      <div class="collapse {{#if collapsed}}in{{/if}}" id="Settings" aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
-        <ul class="list-group white-bg">
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                <p>Category</p>
-              </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                {{#if canEditMenu}}
-                  {{> ghostEditableSelect values=categoryOptions selected=item.category onValueChanged=getOnCategoryChanged}}
-                {{else}}
-                  <p>{{currentCategory.name}}</p>
-                {{/if}}
-              </div>
+  <div class="ibox panel panel-default">
+    {{#ItemsToCollapse options=settingsOptions uiStates=uiStates}}
+      <ul class="list-group white-bg">
+        <li class="list-group-item">
+          <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+              <p>Category</p>
             </div>
-          </li>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+              {{#if canEditMenu}}
+                {{> ghostEditableSelect values=categoryOptions selected=item.category onValueChanged=getOnCategoryChanged}}
+              {{else}}
+                <p>{{currentCategory.name}}</p>
+              {{/if}}
+            </div>
+          </div>
+        </li>
 
-          <li class="list-group-item">
-            <div class="row">
-              <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                <p>Status</p>
-              </div>
-              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                {{#if isArchived}}
-                  <p>archived</p>
-                {{else}}
-                  {{#if canEditMenu}}
-                    {{> ghostEditableSelect values=statusOptions selected=item.status onValueChanged=getOnStatusChanged}}
-                  {{else}}
-                    <p>{{status}}</p>
-                  {{/if}}
-                {{/if}}
-              </div>
+        <li class="list-group-item">
+          <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+              <p>Status</p>
             </div>
-          </li>
-        </ul>
-      </div>
-    </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+              {{#if isArchived}}
+                <p>archived</p>
+              {{else}}
+                {{#if canEditMenu}}
+                  {{> ghostEditableSelect values=statusOptions selected=item.status onValueChanged=getOnStatusChanged}}
+                {{else}}
+                  <p>{{status}}</p>
+                {{/if}}
+              {{/if}}
+            </div>
+          </div>
+        </li>
+      </ul>
+    {{/ItemsToCollapse}}
+  </div>
 </template>
