--- a/client/views/app/tasks/task-widget/task-widget.html
+++ b/client/views/app/tasks/task-widget/task-widget.html
@@ -10,18 +10,7 @@
 
     <div class="ibox hidden-print task-list-content">
       <hr>
-      <div class="ibox-title">
-        <h5>Tasks &nbsp;</h5>
-        <div class="ibox-tools">
-          <button class="btn btn-primary btn-xs pull-left create-task">Add Task</button>
-          <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#Tasks"
-             aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="Tasks">
-            <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i></a>
-        </div>
-
-      </div>
-      <div id="Tasks" class="ibox-content no-padding collapse {{#if collapsed}}in{{/if}}"
-           aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
+      {{#ItemsToCollapse options=tasksOptions uiStates=uiStates}}
         {{#if tasks.count}}
           <div class="table-responsive">
             <table class="table table-hover table-mail task-list-container">
@@ -35,7 +24,7 @@
         {{else}}
           <h3>No tasks here</h3>
         {{/if}}
-      </div>
+      {{/ItemsToCollapse}}
     </div>
   </div>
 </template>
