first step to the meeting details

--- a/client/views/app/meetings/meetings-list/meetings-list-item/meetings-list-item.html
+++ b/client/views/app/meetings/meetings-list/meetings-list-item/meetings-list-item.html
@@ -1,5 +1,5 @@
 <template name="meetingsListItem">
-  <tr>
+  <tr class="meeting-list-item">
     <td>{{dateInterval startTime endTime}}</td>
     <td>{{title}}</td>
     <td class="project-people hidden-xs">
