--- a/server/lib/notifications/templates/new-meeting.handlebars
+++ b/server/lib/notifications/templates/new-meeting.handlebars
@@ -44,6 +44,6 @@
     <a href="{{maybeUrl}}" class="claim-button maybe-button">Maybe</a>
     <a href="{{noUrl}}" class="claim-button reject-button">Reject</a>
 
-    <a href="{{meeting.url}}" class="claim-button go-to-button" data-link-type="navigation">Go to the meeting page</a>
+    <a href="{{url}}" class="claim-button go-to-button" data-link-type="navigation">Go to the meeting page</a>
   </p>
 </div>
