Updated managerNoteSidget, added list of notes

--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-editor/manager-note-editor.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-editor/manager-note-editor.html
@@ -2,13 +2,8 @@
   <div class="manager-note-editor">
     <form>
       <div class="form-group">
-        <input type="text" class="form-control note-title" name="note-title" placeholder="Title"
-               value="{{note.title}}" required="required"/>
-      </div>
-      <!-- /input-group -->
-      <div class="form-group">
-          <textarea name="new-task-description" cols="30" rows="10" class="form-control"
-                    placeholder="Description ...">{{note.description}}</textarea>
+          <textarea name="note-text" cols="30" rows="10" class="form-control"
+                    placeholder="Description...">{{note.text}}</textarea>
       </div>
 
       <div class="form-group">
