--- a/client/views/app/menu-items/details/widgets/widgets.html
+++ b/client/views/app/menu-items/details/widgets/widgets.html
@@ -8,7 +8,7 @@
               <h4>Costing</h4>
             </div>
             <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6">
-              <h4>{{salesPrice}}
+              <h4>{{item.salesPrice}}
                 <small>Sale Price</small>
               </h4>
             </div>
@@ -66,7 +66,7 @@
               </h4>
             </div>
             <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
-              <h4 class="pull-right">123</h4>
+              <h4 class="pull-right">{{menuItemStats.lastSevenDaysContribution}}</h4>
             </div>
             <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
               <h4 class="text-navy pull-right">
