--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.html
@@ -1,5 +1,5 @@
 <template name="managerNoteWidget">
-  <div class="note-list-widget">
+  <div class="manager-note-widget">
     {{#if currentNote}}
       {{> managerNoteEditor onCloseEditor=onCloseEditor note=currentNote}}
     {{/if}}
@@ -17,7 +17,7 @@
           <div class="row">
             {{#if notes}}
               <div class="table-responsive">
-                <table class="table table-hover">
+                <table class="table table-hover manager-note-list">
                   {{#each notes}}
                     {{> managerNoteItem note=this onEditNote=onEditNote}}
                   {{/each}}
