Fixed add shift bug, added midnight shift indication

--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
@@ -27,6 +27,10 @@
       {{/if}}
     </div>
 
+    {{#if isMidnight}}
+      <i class="fa fa-moon-o midnight-icon" title="Midnight shift"></i>
+    {{/if}}
+
     <div class="agile-detail">
       <i class="fa fa-angle-double-right"></i>
       {{#if canEditRoster}}
