--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.less
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.less
@@ -1,4 +1,8 @@
+@import "../../../../../../stylesheets/theme-globals.import.less";
+
 .shift-basic-component {
+  position: relative;
+
   .shift-remove-wrapper {
     display: none;
   }
@@ -17,5 +21,12 @@
     color: #DD1144;
     font-style: italic;
     font-weight: normal;
+  }
+
+  .midnight-icon {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: #DD1144;
   }
 }
