--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.less
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-note-widget/manager-note-widget.less
@@ -1,8 +1,12 @@
 .manager-note-widget {
-  .manager-note-list tr td {
-    padding: 10px;
+  .create-note {
+    padding: 4px 8px;
   }
-
+  .manager-note-list {
+    tr td {
+      padding: 10px;
+    }
+  }
   .manager-note-item {
     .note-comment-count .label {
       line-height: 12px;
