--- a/client/views/app/meetings/meetings-list/meetings-list-header/meetings-header.html
+++ b/client/views/app/meetings/meetings-list/meetings-list-header/meetings-header.html
@@ -1,8 +1,10 @@
 <template name="meetingsHeader">
   <div class="title-action">
-    <button class="btn btn-primary create-new-meeting">
-      <i class="fa fa-plus"></i>
-      Meeting
-    </button>
+    {{#if canCreateMeetings}}
+      <button class="btn btn-primary create-new-meeting">
+        <i class="fa fa-plus"></i>
+        Meeting
+      </button>
+    {{/if}}
   </div>
 </template>
