--- a/client/views/app/meetings/meeting-details/meeting-details.html
+++ b/client/views/app/meetings/meeting-details/meeting-details.html
@@ -1,5 +1,5 @@
 <template name="meetingDetails">
-  {{> pageHeading title='Meeting'}}
+  {{> pageHeading title='Meeting' category='Meetings'}}
 
   <div class="row">
     <div class="col-sm-8">
@@ -8,6 +8,7 @@
           <div class="ibox float-e-margins">
             <div class="ibox-title">
               <h5>Meeting Details:</h5>
+
               <div class="ibox-tools">
                 <a class="collapse-link" data-toggle="collapse"><i class="fa fa-chevron-up"></i></a>
               </div>
@@ -17,7 +18,15 @@
                 <thead>
                 <tr>
                   <td><b>Title:</b></td>
-                  <td>{{meeting.title}}</td>
+                  <td>
+                    {{#if isMeetingCreator}}
+                      <a href="#" class="meeting-title-editable">
+                        {{meeting.title}}
+                      </a>
+                    {{else}}
+                      {{meeting.title}}
+                    {{/if}}
+                  </td>
                 </tr>
                 </thead>
                 <tbody>
@@ -27,27 +36,40 @@
                 </tr>
                 <tr>
                   <td><b>Location:</b></td>
-                  <td>{{meeting.location}}</td>
+                  <td>
+                    {{#if isMeetingCreator}}
+                      <a href="#" class="meeting-location-editable">
+                        {{meeting.location}}
+                      </a>
+                    {{else}}
+                      {{meeting.location}}
+                    {{/if}}
+                  </td>
                 </tr>
                 <tr>
                   <td><b>Attendees:</b></td>
                   <td class="project-people">
-                    <a href="" class="pull-left">
-                      {{#each meeting.attendees}}
-                        <img alt="{{username this}}" class="img-circle" src="{{profilePicture this}}">
-                      {{/each}}
-                    </a>
+                    <div class="pull-left">
+                      {{#if meeting.accepted.length}}
+                        {{#each meeting.accepted}}
+                          {{> userCircleIcon this}}
+                        {{/each}}
+                      {{else}}
+                        No attendees yet
+                      {{/if}}
+                    </div>
+
                     <div class="col-md-4">
-                      <button type="button" class="btn btn-default btn-sm pull-left">Add</button>
+                      <button type="button" class="btn btn-default btn-sm pull-left add-user">
+                        Add
+                      </button>
                     </div>
                   </td>
                 </tr>
                 <tr>
                   <td><b>Are You Attending?</b></td>
                   <td>
-                    <button type="button" class="btn btn-default {{#if buttonClass 'yes'}}btn-primary{{/if}}">Yes</button>
-                    <button type="button" class="btn btn-default {{#if buttonClass 'maybe'}}btn-warning{{/if}}">Maybe</button>
-                    <button type="button" class="btn btn-default {{#if buttonClass 'no'}}btn-danger{{/if}}">No</button>
+                    {{> attendingButtons meeting=meeting}}
                   </td>
                 </tr>
                 </tbody>
@@ -55,25 +77,29 @@
             </div>
           </div>
 
-
           <div class="row m-t-sm">
             <div class="col-lg-12">
               <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                  <h5>Agenda &amp; Minutes</h5>
+                  <h5>Agenda & Minutes</h5>
+
                   <div class="ibox-tools">
                     <a class="collapse-link" data-toggle="collapse"><i class="fa fa-chevron-up"></i></a>
                   </div>
                 </div>
-                <div class="ibox-content" style="display: block;">
-                  {{> autosaveTextEditor text="some text"}}
+                <div class="ibox-content">
+                  {{> autosaveTextEditor text=agendaAndMinutes saveChanges=saveChanges}}
                 </div>
               </div>
-              <hr class="">
-
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-4 col-sm-4 no-padding">
+      <div class="wrapper wrapper-content project-manager">
+        {{> commentsPanel id=id type='meeting'}}
       </div>
     </div>
   </div>
