--- a/client/views/app/meetings/meetings-list/meetings-list-item/meetings-list-item.html
+++ b/client/views/app/meetings/meetings-list/meetings-list-item/meetings-list-item.html
@@ -6,7 +6,7 @@
       <span class="pull-left">
         {{#if accepted.length}}
           {{#each accepted}}
-            <img alt="{{username this}}" title="{{username this}}" class="img-circle" src="{{profilePicture this}}">
+            {{> userCircleIcon this}}
           {{/each}}
         {{else}}
           No attendees yet
