--- a/client/views/app/menu-items/details/collapsible-menu-item-elements/collapsible-menu-item-elements.html
+++ b/client/views/app/menu-items/details/collapsible-menu-item-elements/collapsible-menu-item-elements.html
@@ -2,30 +2,19 @@
   <div class="ibox-title">
     <h5>{{options.name}} &nbsp;</h5>
     <div class="ibox-tools">
-    {{#if type.performance}}
-      <a class="btn btn-xs btn-link"
-         href="{{pathFor route='menuItemsRankReport' category='all' rangeType='yesterday' startDate=options.startDate}}">
-        View Menu Rank Report
-      </a>
-    {{/if}}
-    {{#if canEditMenu}}
-      {{#if type.image}}
-        <a href="#" class="upload-image-button">
-          <i class="fa fa-cloud-upload"></i>
+      {{#if options.url}}
+        <a href="{{options.url}}" class="{{options.className}}">
+          {{#if options.icon}}<i class="{{options.icon}}"></i>{{/if}}
+          {{#if options.text}}{{options.text}}{{/if}}
         </a>
-      {{else}}
-        {{#if type.notInstructionsOrSettings}}
-          <button class="add-{{options.type}} btn btn-primary btn-xs {{options.pull}}">Add {{options.name}}</button>
-        {{/if}}
       {{/if}}
-    {{/if}}
       <a class="{{#if collapsed}}collapsed{{/if}}" data-toggle="collapse" data-target="#{{options.type}}"
          aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}" aria-controls="{{options.type}}">
         <i class="fa fa-chevron-{{#if collapsed}}up{{else}}down{{/if}}"></i></a>
     </div>
-
   </div>
-  <div id="{{options.type}}" class="ibox-content panel-body {{options.padding}} collapse {{#if collapsed}}in{{/if}}"
+  <div id="{{options.type}}" class="{{#if collapsed}}hide{{else}}show{{/if}}-content ibox-content panel-body
+                                    {{options.contentPadding}} collapse {{#if collapsed}}in{{/if}}"
        aria-expanded="{{#if collapsed}}true{{else}}false{{/if}}">
     {{> Template.contentBlock}}
   </div>
