--- a/client/views/app/menu-items/details/widgets/widgets.less
+++ b/client/views/app/menu-items/details/widgets/widgets.less
@@ -1,4 +1,11 @@
 .edit-item-price {
-  color: #fff;
-  border-color: #fff;
+  color: #4BADEA;
+  border-color: #4BADEA;
+}
+
+#performance {
+  .editable-container {
+    position: relative;
+    z-index: 1;
+  }
 }
