--- a/client/views/app/menu-items/details/widgets/widgets.html
+++ b/client/views/app/menu-items/details/widgets/widgets.html
@@ -1,14 +1,19 @@
 <template name="menuDetailPerformance">
   <div class="ibox panel panel-default">
-    {{#collapsibleMenuItemElements options=performanceOptions uiStates=uiStates}}
+    {{#collapsibleMenuItemElements options=performanceOptions}}
       <ul class="list-group">
         <li class="list-group-item">
           <div class="row">
-            <div class="col-lg-1 col-md-12 col-sm-12 col-xs-6">
+            <div class="col-lg-2 col-md-12 col-sm-12 col-xs-6">
               <h4>Costing</h4>
             </div>
             <div class="col-lg-2 col-md-3 col-sm-3 col-xs-6">
-              <h4>{{item.salesPrice}}
+              <h4>
+                {{#if canEditMenu}}
+                  <a href="#" class="edit-item-price"> {{item.salesPrice}} </a>
+                {{else}}
+                  {{item.salesPrice}}
+                {{/if}}
                 <small>Sale Price</small>
               </h4>
             </div>
@@ -48,7 +53,7 @@
               <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
                 <h4 class="{{#if itemRank.up}}text-navy{{else}}{{#if itemRank.notChanged}}text-primary{{/if}}text-danger{{/if}} pull-right">
                   {{itemRank.changedPoints}} &nbsp;
-                  {{#if itemRank.notChanged}}{{else}}<i class="fa fa-arrow-{{#if itemRank.up}}up{{else}}down{{/if}}"></i>{{/if}}
+                  {{#unless itemRank.notChanged}}<i class="fa fa-arrow-{{#if itemRank.up}}up{{else}}down{{/if}}"></i>{{/unless}}
                 </h4>
               </div>
             {{else}}
@@ -69,8 +74,9 @@
               <h4 class="pull-right">{{menuItemStats.lastSevenDaysContribution}}</h4>
             </div>
             <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
-              <h4 class="text-navy pull-right">
-                14 % <i class="fa fa-arrow-up"></i>
+              <h4 class="{{#if contribution.up}}text-navy{{else}}{{#if contribution.notChanged}}text-primary{{/if}}text-danger{{/if}}
+               pull-right">{{contribution.difference}}
+                {{#unless contribution.notChanged}}<i class="fa fa-arrow-{{#if contribution.up}}up{{else}}down{{/if}}"></i>{{/unless}}
               </h4>
             </div>
           </div>
