--- a/client/views/app/tasks/task-widget/task-widget.html
+++ b/client/views/app/tasks/task-widget/task-widget.html
@@ -10,7 +10,7 @@
 
     <div class="ibox hidden-print task-list-content">
       <hr>
-      {{#collapsibleMenuItemElements options=tasksOptions uiStates=uiStates}}
+      {{#collapsibleMenuItemElements options=tasksOptions}}
         {{#if tasks.count}}
           <div class="table-responsive">
             <table class="table table-hover table-mail task-list-container">
